...
                android:padding="10dp"
                android:textColor="@color/purple_500"
                />


            <EditText
                android:id="@+id/user_prompt"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/purple_500"
                android:textColorHint="@color/purple_500"
...
                android:padding="10dp"
                android:textColor="@color/purple_500"
                />


            <EditText
                android:id="@+id/pass_prompt"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />

            <Button
                android:id="@+id/delete"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="Delete Account"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorSecondary"
                />

        </LinearLayout>

...
