...
    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/ic_uno_logo"
        app:layout_constraintBottom_toTopOf="@id/login_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
...
        android:text="@string/login_header"
        android:textSize="20sp"
        android:layout_marginTop="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_field"
        app:layout_constraintVertical_chainStyle="packed"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <EditText
...
        android:layout_marginHorizontal="40sp"
        android:layout_height="40sp"
        android:layout_marginTop="40sp"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_field"
        android:hint="@string/username_hint"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="40sp"
        android:layout_height="40sp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password_hint"
        android:layout_marginTop="30sp"
        />
...
