...
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/top_text"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:text="Settings"
            android:textSize="20sp"

            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
...
            android:textStyle="bold"/>

    </LinearLayout>


    <Button
        android:id="@+id/delete_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="80dp"

        android:text="Delete Account"
...
