...
    <string name="postman_url">https://3d5d7b90-cdb8-41bc-b45b-cffb50951687.mock.pstmn.io/%s/%s</string>
    <string name="remote_server_url">http://coms-309-029.class.las.iastate.edu:8080/%s/%s</string>
    <string name="fake_websocket">wss://demo.piesocket.com/v3/channel_123?api_key=VCXCEuvhGcBDP7XhiJJUDvR1e1D3eiVjgZ9VRiaV&amp;notify_self</string>

    <!--login screen strings-->
    <string name="logo_content_description">logo</string>
    <string name="login_header">Enter Login Credentials</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="showPassword">show</string>
    <string name="hidePassword">hide</string>
    <string name="validatingMessage">Validating Credentials...</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="searchid">Search by UserID</string>
    <string name="searchlobbyid">Search by LobbyID</string>

    <string name="login_failed">Invalid login credentials. Try Again</string>
    <string name="login_error">Login Error</string>
...

    <!--user menu strings-->
    <string name="add_friends_button">Add Friends</string>
    <string name="user_id_display">User Id: %d</string>
    <string name="games_played_display">Games Played: %d</string>
    <string name="games_won_display">Games Won: %d</string>
    <string name="teams_button">Teams</string>

    <!--user settings strings-->
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="new_username">New Username:</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old Password:</string>
...
    <string name="friends">Friends</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="team_wins">Team wins</string>

    <!-- Admin Screen-->
    <string name="admin_screen">Admin Page</string>
    <string name="admin_users">Users</string>
    <string name="admin_lobbies">Lobbies</string>
    <string name="clear">x</string>
    <string name="change">Change</string>
    <string name="promote">Promote to Admin</string>

    <!-- Teams Screen -->
    <string name="teams_page">Teams Page</string>
...
